[project]
name = "UAP-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ellys", email = "ellysputri19@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "joblib>=1.4.2", "scikit-learn>=1.6.0", "torch>=2.5.1", "pytorch-tabnet>=4.1.0", "xgboost>=2.1.3", "tensorflow>=2.18.0", "shap>=0.46.0", "seaborn>=0.13.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
